--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                                 <p class="red hd">Contact Us</p>
                             </div>
                             <p class="desc hd">
-                                Contact us for more information about our products, professional services, support, and training.
+                                Contact us for more information about our products, professional services, support and training.
                             </p>
                         </div>
                     </div>
@@ -72,10 +72,14 @@
         </section>
     </main>
     <footer>
+        <div class="section light get-start center">
+            <div class="container">
+            </div>
+        </div>
         <div class="section links">
             <div class="container">
                 <div class="left-section">
-                    <div class="title">Navigation</div>
+                    <!--<div class="title">Navigation</div>-->
                     <ul>
                         <li>
                             <a href="index.html">TiDB</a>
