--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="image/logo.png" alt="">
                 </div>
                 <div class="title field">
-                    <p>The scalable, high availability </p>
+                    <p>The scalable, highly available </p>
                     <p>strongly consistent, transactional SQL Database</p>
                 </div>
                 <div class="desc">
@@ -40,12 +40,12 @@
         </section>
         <section class="home-intro home-intro-0">
             <div class="container center">
-                <h3 class="title">what's TiDB</h3>
+                <h3 class="title">What's TiDB</h3>
                 <div class="br"></div>
                 <div class="desc">
-                    <p>TiDB 是开源的分布式数据库，参考 Google F1/Spanner 原理实现了水平伸缩，一致性的分布式事务，多副本同步复制</p>
+                    <p>TiDB 是开源的分布式数据库，参考 Google F1/Spanner 实现了水平伸缩，一致性的分布式事务，多副本同步复制</p>
                     <p>等重要 NewSQL 特性。结合了 RDBMS 和 NoSQL 的优点，部署简单，扩容和在线表结构变更无阻塞，异地容灾高可用</p>
-                    <p>同时完全兼容 MySQL 协议，使迁移使用成本降到极低</p>
+                    <p>，同时完全兼容 MySQL 协议，使迁移使用成本降到极低。<</p>
                 </div>
                 <div class="bg"></div>
             </div>
@@ -110,7 +110,8 @@
                                 <div class="title white">在线 Schema 变更</div>
                                 <div class="br white"></div>
                                 <div class="desc">
-                                    <p>TiDB Schema 可随时在线执行DDL来变更，添加列和索引并不会影响进行中的操作。不停机，不停数据库服务，执行表结构变动在分布式系统中，这个特性极其重要，目前除了 Google 的 F1 没有其他系统实现
+                                    <p>TiDB 可在线执行 DDL 进行 schema 变更，添加列和索引不会阻塞进行中的操作。在分布式系统中，这个特性极其重要，目前除了
+                                        Google 的 F1 没有其他系统实现。
                                     </p>
                                 </div>
                             </div>
@@ -160,7 +161,7 @@
                                 <div class="title yellow">兼容 MySQL 协议</div>
                                 <div class="br yellow"></div>
                                 <div class="desc">
-                                    <p>你可以像使用 MySQL 一样来使用 TiDB，你可以使用 TiDB 来替换 MySQL 来服务你的业务，而绝大多情况下无需修改一行代码。面向 OLTP 应用，支持 MySQL DDL 语法，支持常规的 CRUD 语句，支持 JOIN 等聚合语句
+                                    <p>你可以像使用 MySQL 一样来使用 TiDB，你可以使用 TiDB 来替换 MySQL 来服务你的业务，而绝大多情况下无需修改一行代码。面向 OLTP 应用，支持 MySQL DDL 语法，支持常规的 CRUD 语句，支持 JOIN 等聚合语句。
                                     </p>
                                 </div>
                             </div>
@@ -189,11 +190,11 @@
                         </div>
                         <div class="cell">
                             <div class="text">
-                                <div class="title blue">数据迁移简单</div>
+                                <div class="title blue">便捷的数据迁移</div>
                                 <div class="br blue"></div>
                                 <div class="desc">
                                     <p>
-                                        TiDB 支持在线和离线的数据迁移，用户可在不停止业务的前提下，将已有的数据安全地迁移到 TiDB。由于 TiDB 对外暴露的是 MySQL 协议，可以和 MySQL 的数据迁移工具配合使用
+                                        TiDB 支持在线和离线的数据迁移，用户可在不停止业务的前提下，将已有的数据安全地迁移到 TiDB。由于 TiDB 对外暴露的是 MySQL 协议，可以和 MySQL 的数据迁移工具配合使用。
                                     </p>
                                 </div>
                             </div>
@@ -214,7 +215,7 @@
         <div class="section links">
             <div class="container">
                 <div class="left-section">
-                    <div class="title">Navigation</div>
+                    <!--<div class="title">Navigation</div>-->
                     <ul>
                         <li>
                             <a href="#">TiDB</a>
