--- a/team.html
+++ b/team.html
@@ -49,15 +49,15 @@
                 <div class="br auto"></div>
                 <div class="major">
                     <p>
-                    PingCAP 成立于 2015 年 4 月，是业界领先的企业级分布式 OLTP 解决方案提供商，是国内唯一专注于 NewSQL OLTP <br>领域的团队，具备全球竞争力，致力于成为世界领先的大数据技术和解决方案提供商。
+                    PingCAP 成立于 2015 年 4 月，是业界领先的企业级分布式 OLTP 解决方案提供商，是国内唯一专注于开源 NewSQL <br>领域的团队，具备全球竞争力，致力于成为世界领先的大数据技术和解决方案提供商。
                     </p>
                 </div>
                 <div class="desc">
                     <p>
-                        创始团队是国内最一流的底层开源技术团队，来自京东、360、金山和豌豆荚底层架构组核心成员，曾研发国内知名开源分布式缓存数据库 Codis ( Redis的集群方案，已广泛
-                        应用于小米，滴滴打车，汽车之家，猎豹移动，迅雷，触控科技，豌豆荚，科大迅飞等 )。
-                        公司专注于实现高性能，在线弹性扩容和分布式事务特性，提供全球最顶级的跨数据中心容灾
-                        分布式 NewSQL 数据库，为客户在去 IOE 大背景下提供可靠的解决方案，是企业在云上面的最佳关系型数据库
+                        创始团队是国内最一流的开源技术团队，来自京东、360、金山和豌豆荚底层架构组核心成员，曾研发国内知名的开源分布式缓存数据库 Codis (Redis
+                        的集群方案，已广泛应用于百度，小米，滴滴打车，汽车之家，猎豹移动，迅雷，触控科技，豌豆荚，科大迅飞等)。
+                        公司专注于实现高性能，在线弹性扩容和分布式事务特性，提供全球最顶级的跨数据中心容灾分布式 NewSQL 数据库，为客户在去
+                        IOE 大背景下提供可靠的解决方案，是企业在云上面的最佳关系型数据库。
                     </p>
                 </div>
             </div>
@@ -70,12 +70,14 @@
                 </div>
                 <div class="br auto red"></div>
                 <div class="major">
-                    <p>回答这个问题之前，让我们回到最根本的一个问题上来：当代开发者们到底需要什么样的一个数据库？</p>
+                    <p>回答这个问题之前，让我们回到最根本的一个问题上来：当代开发者们到底需要一个什么样的数据库？</p>
                 </div>
                 <div class="desc field">
                     <p>
-                    随着时代的发展，各种终端的普及，应用和数据的规模越来越大，各种云服务的方案层出不穷。在这个一切都可以水平扩展的时代，机器可扩展，服务可扩展，监控可扩展，缓存可扩展，然而你会发现，大多数应用最底层的数据存储 --- 关系型数据库，难以找到一个优雅易用的水平扩展解决方案，一直以来不得不依赖主从复制，静态 Sharding ，同时业务层的各种纠结的 Workarounds 勉强度日。
-                    作为开发者的我们深有体会，终于有一天，我们认真的坐下来审视这个问题，最终决定彻底地解决掉它，我们想要的是:
+                        随着时代的发展，各种终端的普及，应用和数据的规模越来越大，各种云服务的方案层出不穷。
+                        在这个一切都可以水平扩展的时代，机器可扩展，服务可扩展，监控可扩展，缓存可扩展，然而你会发现大多数应用最底层的数据存储 -- 关系型数据库，
+                        难以找到一个优雅易用的水平扩展解决方案，一直以来不得不依赖主从复制，静态 Sharding 以及业务层各种 Workarounds 勉强度日。
+                        作为开发者的我们深有体会，终于有一天，我们认真的坐下来审视这个问题，决定彻底地解决掉它，我们想要的是:
                     </p>
                 </div>
                 <div class="skill-tree">
@@ -101,7 +103,7 @@
                     </div>
                     <div class="skill-tree-block skill-tree-block-4">
                         <div class="text">
-                            在线的Schema变更，我们不想每次更新Schema都要面临停止服务的可能。
+                            在线的 Schema 变更，我们不想每次更新Schema都要面临停止服务的可能。
                         </div>
                     </div>
                     <div class="skill-tree-block skill-tree-block-5">
@@ -123,7 +125,8 @@
                     <p>PingCAP 是一个年轻开放、紧密团结的团队，我们的愿景是打造代表未来的数据库产品</p>
                 </div>
                 <div class="desc field">
-                    <p>要达到这个目标，我们需要凝聚同样充满好奇心、有追求、技艺高超的小伙伴。因此，我们一致认为，好的文化也必须是 PingCAP 的核心竞争力。<br>
+                    <p>要达到这个目标，我们需要凝聚同样充满好奇心、有追求、技艺高超的小伙伴。<br>
+                        因此，我们一致认为，好的文化也必须是 PingCAP 的核心竞争力。<br>
                         在这里，我们提供追求梦想的开发者所需要的一切</p>
                 </div>
                 <img class="logo" src="image/advantage.png" alt="">
@@ -137,16 +140,20 @@
                 </div>
                 <br>
                 <div class="field">
-                    <a href="http://www.lagou.com/gongsi/68006.html" target="_blank" class="btn round framed">开放职位</a>
+                    <a href="http://www.lagou.com/gongsi/113568.html" target="_blank" class="btn round framed">开放职位</a>
                 </div>
             </div>
         </section>
     </main>
     <footer>
+        <div class="section light get-start center">
+            <div class="container">
+            </div>
+        </div>
         <div class="section links">
             <div class="container">
                 <div class="left-section">
-                    <div class="title">Navigation</div>
+                    <!--<div class="title">Navigation</div>-->
                     <ul>
                         <li>
                             <a href="index.html">TiDB</a>
