--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div class="br"></div>
                 <div class="desc">
                     <p>TiDB 是开源的分布式数据库，参考 Google F1/Spanner 实现了水平伸缩，一致性的分布式事务，多副本同步复制</p>
-                    <p>等重要 NewSQL 特性。结合了 RDBMS 和 NoSQL 的优点，部署简单，扩容和在线表结构变更无阻塞，异地容灾高可用</p>
-                    <p>，同时完全兼容 MySQL 协议，使迁移使用成本降到极低。<</p>
+                    <p>等重要 NewSQL 特性。结合了 RDBMS 和 NoSQL 的优点，部署简单，扩容和在线表结构变更无阻塞，异地容灾高可用，</p>
+                    <p>同时完全兼容 MySQL 协议，使迁移使用成本降到极低。</p>
                 </div>
                 <div class="bg"></div>
             </div>
