--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,12 @@
                     </li>
                     <li>
                         <div class="field">
-                            <img class="icon" src="image/email-icon.png" alt="">
+                            <a href="mailto:info@pingcap.com">
+                                <img class="icon" src="image/email-icon.png" alt="">
+                            </a>
                         </div>
                         <p class="field">邮箱</p>
-                        <div class="desc">info@pingcap.com</div>
+                        <div class="desc"><a href="mailto:info@pingcap.com"> info@pingcap.com</a></div>
                     </li>
                     <li>
                         <div class="field">
@@ -72,9 +74,7 @@
         </section>
     </main>
     <footer>
-        <div class="section light get-start center">
-            <div class="container">
-            </div>
+        <div class="section light center">
         </div>
         <div class="section links">
             <div class="container">
