--- a/team.html
+++ b/team.html
@@ -146,9 +146,7 @@
         </section>
     </main>
     <footer>
-        <div class="section light get-start center">
-            <div class="container">
-            </div>
+        <div class="section light center">
         </div>
         <div class="section links">
             <div class="container">
