--- a/team.html
+++ b/team.html
@@ -49,13 +49,13 @@
                 <div class="br auto"></div>
                 <div class="major">
                     <p>
-                    PingCAP 成立于 2015 年 4 月，是业界领先的企业级分布式 OLTP 解决方案提供商，是国内唯一专注于开源 NewSQL <br>领域的团队，具备全球竞争力，致力于成为世界领先的大数据技术和解决方案提供商。
+                    PingCAP 成立于 2015 年 4 月，是业界领先的企业级分布式 OLTP 解决方案提供商，是国内唯一专注于开源 <br> NewSQL 领域的团队，具备全球竞争力，致力于成为世界领先的大数据技术和解决方案提供商。
                     </p>
                 </div>
                 <div class="desc">
                     <p>
-                        创始团队是国内最一流的开源技术团队，来自京东、360、金山和豌豆荚底层架构组核心成员，曾研发国内知名的开源分布式缓存数据库 Codis (Redis
-                        的集群方案，已广泛应用于百度，小米，滴滴打车，汽车之家，猎豹移动，迅雷，触控科技，豌豆荚，科大迅飞等)。
+                        创始团队是国内最一流的开源技术团队，来自京东、360、金山和豌豆荚底层架构组核心成员，曾研发国内知名的开源分布式缓存数据库 Codis ( Redis
+                        的集群方案，已广泛应用于百度，小米，滴滴打车，汽车之家，猎豹移动，迅雷，触控科技，豌豆荚，科大迅飞等 )。
                         公司专注于实现高性能，在线弹性扩容和分布式事务特性，提供全球最顶级的跨数据中心容灾分布式 NewSQL 数据库，为客户在去
                         IOE 大背景下提供可靠的解决方案，是企业在云上面的最佳关系型数据库。
                     </p>
@@ -76,8 +76,8 @@
                     <p>
                         随着时代的发展，各种终端的普及，应用和数据的规模越来越大，各种云服务的方案层出不穷。
                         在这个一切都可以水平扩展的时代，机器可扩展，服务可扩展，监控可扩展，缓存可扩展，然而你会发现大多数应用最底层的数据存储 -- 关系型数据库，
-                        难以找到一个优雅易用的水平扩展解决方案，一直以来不得不依赖主从复制，静态 Sharding 以及业务层各种 Workarounds 勉强度日。
-                        作为开发者的我们深有体会，终于有一天，我们认真的坐下来审视这个问题，决定彻底地解决掉它，我们想要的是:
+                        难以找到一个优雅易用的水平扩展解决方案，一直以来不得不依赖主从复制，静态 Sharding 以及各种业务层的 Workarounds 勉强度日。
+                        作为开发者的我们深有体会。终于有一天，我们认真的坐下来审视这个问题，决定彻底地解决掉它，我们想要的是:
                     </p>
                 </div>
                 <div class="skill-tree">
@@ -88,7 +88,7 @@
                     </div>
                     <div class="skill-tree-block skill-tree-block-1">
                         <div class="text">
-                            SQL 支持，SQL 有着良好的易用性和生态系统，而且业务层如果已经在使用 SQL 后，再转变到 NoSQL 上是个极其痛苦的过程。
+                            SQL 支持，SQL 有着良好的易用性和生态系统，而业务层如果已经在使用 SQL 后，再转变到 NoSQL 上是个极其痛苦的过程。
                         </div>
                     </div>
                     <div class="skill-tree-block skill-tree-block-2">
@@ -135,7 +135,7 @@
                 </div>
                 <div class="divider auto"></div>
                 <div class="eager">
-                    <p>Feel excited? We are looking forward to your joining!</p>
+                    <p>Feel excited? We look forward to your joining us!</p>
                     <!--<p>我们正在快速成长, 希望您能<span class="red">加入我们</span>!</p>-->
                 </div>
                 <br>
