new modification added.

--- a/index.html
+++ b/index.html
@@ -210,10 +210,12 @@
     <footer>
         <div class="section light get-start center">
             <div class="container">
-                <h3 class="title">Discover More</h3>
+                <h3 class="title">Learn More About TiDB</h3>
                 <br>
-                <a href="https://github.com/pingcap/tidb" target="_blank" class="btn round">Github</a>
+                <a href="https://github.com/pingcap/tidb" target="_blank" class="btn-big round framed">Github</a>
             </div>
+        </div>
+        <div class="section light center">
         </div>
         <div class="section links">
             <div class="container">
@@ -231,13 +233,13 @@
                         </li>
                     </ul>
                 </div>
-                <div class="right-section">
+                <!--<div class="right-section">-->
                     <!--<div class="title">邮件订阅</div>-->
-                    <div class="input">
-                        <input type="email" placeholder="your email address">
-                        <a href='javascript:;' class="input-btn">订阅</a>
-                    </div>
-                </div>
+                    <!--<div class="input">-->
+                        <!--<input type="email" placeholder="your email address">-->
+                        <!--<a href='javascript:;' class="input-btn">订阅</a>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
         <div class="section container copyright">
