--- a/team.html
+++ b/team.html
@@ -164,13 +164,13 @@
                         </li>
                     </ul>
                 </div>
-                <div class="right-section">
+                <!--<div class="right-section">-->
                     <!--<div class="title">邮件订阅</div>-->
-                    <div class="input">
-                        <input type="email" placeholder="your email address">
-                        <a href='javascript:;' class="input-btn">订阅</a>
-                    </div>
-                </div>
+                    <!--<div class="input">-->
+                        <!--<input type="email" placeholder="your email address">-->
+                        <!--<a href='javascript:;' class="input-btn">订阅</a>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
         <div class="section container copyright">
